deployment/oauth2-proxy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth2-proxy
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oauth2-proxy
  template:
    metadata:
      labels:
        app: oauth2-proxy
    spec:
      containers:
      - name: oauth2-proxy
        image: quay.io/oauth2-proxy/oauth2-proxy:v7.6.0
        args:
        - --provider=github
        - --email-domain=*
        - --upstream=http://pdfium-service:80
        - --http-address=0.0.0.0:4180
        - --redirect-url=https://35-204-29-127.nip.io/oauth2/callback
        - --cookie-secret=$(COOKIE_SECRET)
        - --client-id=$(OAUTH2_CLIENT_ID)
        - --client-secret=$(OAUTH2_CLIENT_SECRET)
        ports:
        - containerPort: 4180

---
apiVersion: v1
kind: Service
metadata:
  name: oauth2-proxy
spec:
  ports:
  - port: 80
    targetPort: 4180
    protocol: TCP
  selector:
    app: oauth2-proxy
