deployment/pdfium.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pdfium-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pdfium
  template:
    metadata:
      labels:
        app: pdfium
    spec:
      containers:
      - name: pdfium
        image: jerbob92/pdfium-webserver:v0.0.1
        ports:
          - containerPort: 8082
        resources:
          requests:
            memory: "128Mi"
            cpu: "300m"
          limits:
            memory: "500Mi"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /livez
            port: 8082
          periodSeconds: 10
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /readyz
            port: 8082
          periodSeconds: 5
        startupProbe:
          httpGet:
            path: /livez
            port: 8082
          periodSeconds: 20
          failureThreshold: 6

---
apiVersion: v1
kind: Service
metadata:
  name: pdfium-service
  labels:
    app: pdfium-service
spec:
  selector:
    app: pdfium
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8082
  type: ClusterIP
