deployment/ingress-gke.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-pdfium
  annotations:
    # todo: this doesn't seem to work. Possibly works only with google ingress
    # kubernetes.io/ingress.global-static-ip-name: klippa-assignment-ip
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    # todo: needed?
    # nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: 35-204-29-127.nip.io
    http:
      paths:
      - path: /render
        pathType: Exact
        backend:
          service:
            name: pdfium-service
            port:
              number: 80
      - path: /livez
        pathType: Exact
        backend:
          service:
            name: pdfium-service
            port:
              number: 80
  tls:
    - hosts:
      - 35-204-29-127.nip.io
      secretName: klippa-assignment-tls
