deployment/ingress-testing.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-testing
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "20m"
spec:
  ingressClassName: nginx
  rules:
  - host: 35-204-29-127.nip.io
    http:
      paths:
      - path: /render
        pathType: Exact
        backend:
          service:
            name: pdfium-service
            port:
              number: 80
  tls:
    - hosts:
      - 35-204-29-127.nip.io
      secretName: klippa-assignment-tls
